@@ -4,6 +4,7 @@ Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
 - hypersearch: scroll to new node
+- hypersearch: remove visitor stuff
 - what if dir search requires FTP login to list dir
 - status: don't flash text mode params while loading file
 - soft wrap: dragging on last visible line throws NPEs
